--- a/main.css
+++ b/main.css
@@ -52,6 +52,11 @@ font-size: 16px;
 	
 	margin-bottom: 40px;
 	}
+.lookup li {
+	list-style-type: none;
+	display: inline;
+	margin-bottom: 30px;
+	}
 p {
 	font-family: "comic sans ms", Helvetica, sans-serif;
 	font-size: 16px;
